k8s/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: STAGING_DOMAIN
    http:
      paths:
      - path: /*
        backend:
          serviceName: hello-deployment-frontend-staging
          servicePort: 80
  - host: PRODUCTION_DOMAIN
    http:
      paths:
      - path: /*
        backend:
          serviceName: hello-deployment-frontend-production
          servicePort: 80
